// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppLayout at 1024 px and above: the shell origin/main shipped > /overview: elements, attributes and desktop classes are unchanged 1`] = `
"<div class="flex h-screen overflow-hidden bg-[var(--color-bg)]">
  <a class="fixed left-4 top-4 z-[100] -translate-y-20 rounded-md bg-[var(--color-btn-primary-bg)] px-4 py-2 text-sm font-semibold text-[var(--color-btn-primary-text)] shadow-lg transition-transform focus:translate-y-0" href="#main-content">
    "Skip to main content"
  <aside class="flex-shrink-0 border-r flex flex-col transition-[width] duration-150 w-56" data-sidebar="expanded" style="background: var(--color-bg-card); border-color: var(--color-border);">
    <div class="py-5 border-b flex items-center justify-center px-4" style="border-color: var(--color-border);">
      <span aria-label="testlookup" class="inline-flex items-baseline leading-none text-[20px]" role="img">
        <span style="font-family: var(--font-mono); font-weight: 500; color: var(--color-accent); font-size: 1.45em;">
          "["
        <span style="font-family: var(--font-sans); font-weight: 400; color: var(--color-text); letter-spacing: -0.02em;">
          "test"
          <b style="font-weight: 700;">
            "lookup"
        <span style="font-family: var(--font-mono); font-weight: 500; color: var(--color-accent); font-size: 1.45em;">
          "]"
    <nav aria-label="Main navigation" class="flex-1 py-4 overflow-y-auto px-3">
      <div class="mt-0.5">
        <a aria-current="page" class="sidebar-link relative active" data-discover="true" data-nav-id="home" href="/overview">
          <svg aria-hidden="true" class="lucide lucide-layout-dashboard h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <rect height="9" rx="1" width="7" x="3" y="3">
            <rect height="5" rx="1" width="7" x="14" y="3">
            <rect height="9" rx="1" width="7" x="14" y="12">
            <rect height="5" rx="1" width="7" x="3" y="16">
          <span class="truncate">
            "Home"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="inbox" href="/my-failures">
          <svg aria-hidden="true" class="lucide lucide-inbox h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <polyline points="22 12 16 12 14 15 10 15 8 12 2 12">
            <path d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
          <span class="truncate">
            "Inbox"
          <span aria-label="3 assigned failures" class="rounded-full text-[10px] font-medium tabular-nums ml-auto px-1.5 py-0.5" data-nav-badge="" style="background: color-mix(in srgb, var(--status-failed) 18%, transparent); color: var(--status-failed); border: 1px solid color-mix(in srgb, var(--status-failed) 30%, transparent);">
            "3"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="INVESTIGATE">
          "INVESTIGATE"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="runs" href="/runs">
          <svg aria-hidden="true" class="lucide lucide-git-branch h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M15 6a9 9 0 0 0-9 9V3">
            <circle cx="18" cy="6" r="3">
            <circle cx="6" cy="18" r="3">
          <span class="truncate">
            "Runs"
          <span aria-label="1 run live now" class="h-2 w-2 rounded-full bg-[var(--status-failed)] animate-pulse ml-auto" data-nav-live="" role="img" title="1 run live now">
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="failures" href="/failures">
          <svg aria-hidden="true" class="lucide lucide-bug h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M12 20v-9">
            <path d="M14 7a4 4 0 0 1 4 4v3a6 6 0 0 1-12 0v-3a4 4 0 0 1 4-4z">
            <path d="M14.12 3.88 16 2">
            <path d="M21 21a4 4 0 0 0-3.81-4">
            <path d="M21 5a4 4 0 0 1-3.55 3.97">
            <path d="M22 13h-4">
            <path d="M3 21a4 4 0 0 1 3.81-4">
            <path d="M3 5a4 4 0 0 0 3.55 3.97">
            <path d="M6 13H2">
            <path d="m8 2 1.88 1.88">
            <path d="M9 7.13V6a3 3 0 1 1 6 0v1.13">
          <span class="truncate">
            "Failures"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="flaky" href="/flaky">
          <svg aria-hidden="true" class="lucide lucide-heart-pulse h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5">
            <path d="M3.22 13H9.5l.5-1 2 4.5 2-7 1.5 3.5h5.27">
          <span class="truncate">
            "Flaky tests"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="QUALITY">
          "QUALITY"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="trends" href="/trends">
          <svg aria-hidden="true" class="lucide lucide-trending-up h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M16 7h6v6">
            <path d="m22 7-8.5 8.5-5-5L2 17">
          <span class="truncate">
            "Trends"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="suites" href="/suites">
          <svg aria-hidden="true" class="lucide lucide-folder-tree h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M20 10a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2.5a1 1 0 0 1-.8-.4l-.9-1.2A1 1 0 0 0 15 3h-2a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1Z">
            <path d="M20 21a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-2.9a1 1 0 0 1-.88-.55l-.42-.85a1 1 0 0 0-.92-.6H13a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1Z">
            <path d="M3 5a2 2 0 0 0 2 2h3">
            <path d="M3 3v13a2 2 0 0 0 2 2h3">
          <span class="truncate">
            "Suites"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="test-cases" href="/test-management">
          <svg aria-hidden="true" class="lucide lucide-clipboard-list h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <rect height="4" rx="1" ry="1" width="8" x="8" y="2">
            <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2">
            <path d="M12 11h4">
            <path d="M12 16h4">
            <path d="M8 11h.01">
            <path d="M8 16h.01">
          <span class="truncate">
            "Test cases"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="reports" href="/reports/summary">
          <svg aria-hidden="true" class="lucide lucide-file-text h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            <path d="M10 9H8">
            <path d="M16 13H8">
            <path d="M16 17H8">
          <span class="truncate">
            "Reports"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="RELEASE">
          "RELEASE"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="release-gate" href="/release-gate">
          <svg aria-hidden="true" class="lucide lucide-shield h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z">
          <span class="truncate">
            "Release gate"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="releases" href="/releases">
          <svg aria-hidden="true" class="lucide lucide-package h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
            <path d="M12 22V12">
            <polyline points="3.29 7 12 12 20.71 7">
            <path d="m7.5 4.27 9 5.15">
          <span class="truncate">
            "Releases"
    <div class="py-3 space-y-1 px-3" style="border-top: 1px solid var(--color-border);">
      <a class="sidebar-link relative" data-discover="true" data-nav-id="admin" href="/settings">
        <svg aria-hidden="true" class="lucide lucide-settings h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915">
          <circle cx="12" cy="12" r="3">
        <span class="truncate">
          "Admin"
      <button aria-expanded="true" aria-label="Collapse sidebar" class="sidebar-link w-full" data-sidebar-toggle="" title="Collapse sidebar" type="button">
        <svg aria-hidden="true" class="lucide lucide-panel-left-close h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <rect height="18" rx="2" width="18" x="3" y="3">
          <path d="M9 3v18">
          <path d="m16 15-3-3 3-3">
        <span>
          "Collapse"
  <div class="flex flex-col flex-1 min-w-0 overflow-hidden">
    <header class="relative z-40 h-14 border-b backdrop-blur flex items-center px-6 gap-4 flex-shrink-0" style="border-color: var(--color-border); background: var(--color-bg-card);">
      <div class="flex-1 max-w-md relative">
        <svg aria-hidden="true" class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-[var(--color-text-muted)] pointer-events-none" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <path d="m21 21-4.34-4.34">
          <circle cx="11" cy="11" r="8">
        <input class="input pl-9 pr-9 h-9 text-sm" placeholder="Search tests, runs, defects… (Enter)" type="text" value="">
        <kbd aria-hidden="true" class="absolute right-2.5 top-1/2 -translate-y-1/2 pointer-events-none hidden sm:inline-flex items-center justify-center h-5 min-w-[1.25rem] px-1 rounded border border-[var(--color-border)] bg-[var(--color-bg-secondary)] text-[11px] font-mono text-[var(--color-text-muted)]">
          "/"
      <select aria-label="Select project" class="bg-[var(--color-bg-secondary)] border border-[var(--color-border)] text-[var(--color-text-secondary)] text-sm rounded-lg px-3 py-1.5 focus:outline-none focus:ring-2 focus:ring-[var(--color-ring)]">
        <option value="">
          "— Select project —"
        <option value="all">
          "All Projects"
        <option value="p1">
          "Core UI"
      <div data-stub="release-picker">
      <div class="ml-auto">
        <div class="relative">
          <button aria-expanded="false" aria-haspopup="menu" aria-label="Help" class="p-2 rounded-lg text-[var(--color-text-muted)] hover:text-[var(--color-text)] hover:bg-[var(--color-bg-secondary)] transition-colors" data-help-menu="" title="Help" type="button">
            <svg aria-hidden="true" class="lucide lucide-circle-question-mark w-5 h-5" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <circle cx="12" cy="12" r="10">
              <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3">
              <path d="M12 17h.01">
      <div class="relative">
        <button aria-label="Notifications (2 unread)" class="relative p-2 rounded-lg text-[var(--color-text-muted)] hover:text-[var(--color-text)] hover:bg-[var(--color-bg-secondary)] transition-colors">
          <svg aria-hidden="true" class="lucide lucide-bell w-5 h-5" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M10.268 21a2 2 0 0 0 3.464 0">
            <path d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326">
          <span class="absolute -top-0.5 -right-0.5 min-w-[18px] h-[18px] bg-[var(--status-failed)] text-white text-[11px] font-bold rounded-full flex items-center justify-center px-1">
            "2"
      <div class="relative border-l pl-4 h-full flex items-center" style="border-color: var(--color-border);">
        <button aria-expanded="false" aria-haspopup="menu" aria-label="Account menu" class="flex items-center gap-3 h-full rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-ring)]" type="button">
          <div class="w-8 h-8 rounded-full flex items-center justify-center text-white font-bold text-xs flex-shrink-0 bg-[var(--color-accent-muted)]">
            "TU"
          <div class="flex flex-col justify-center items-start">
            <span class="text-sm font-medium text-[var(--color-text)] leading-none">
              "Test User"
            <span class="text-xs text-[var(--color-text-muted)] mt-1 leading-none">
              "Admin"
    <main class="relative flex-1 overflow-auto" id="main-content" tabindex="-1">
      <div class="mx-auto w-full max-w-[1600px] px-4 py-6 sm:px-6 lg:px-8 xl:px-10">
        <div>
          "Page"
        <div class="sr-only" data-chart-announcer="polite" role="status">
        <div aria-atomic="true" aria-live="assertive" class="sr-only" data-chart-announcer="assertive">"
`;

exports[`AppLayout at 1024 px and above: the shell origin/main shipped > /settings/profile: elements, attributes and desktop classes are unchanged 1`] = `
"<div class="flex h-screen overflow-hidden bg-[var(--color-bg)]">
  <a class="fixed left-4 top-4 z-[100] -translate-y-20 rounded-md bg-[var(--color-btn-primary-bg)] px-4 py-2 text-sm font-semibold text-[var(--color-btn-primary-text)] shadow-lg transition-transform focus:translate-y-0" href="#main-content">
    "Skip to main content"
  <aside class="flex-shrink-0 border-r flex flex-col transition-[width] duration-150 w-56" data-sidebar="expanded" style="background: var(--color-bg-card); border-color: var(--color-border);">
    <div class="py-5 border-b flex items-center justify-center px-4" style="border-color: var(--color-border);">
      <span aria-label="testlookup" class="inline-flex items-baseline leading-none text-[20px]" role="img">
        <span style="font-family: var(--font-mono); font-weight: 500; color: var(--color-accent); font-size: 1.45em;">
          "["
        <span style="font-family: var(--font-sans); font-weight: 400; color: var(--color-text); letter-spacing: -0.02em;">
          "test"
          <b style="font-weight: 700;">
            "lookup"
        <span style="font-family: var(--font-mono); font-weight: 500; color: var(--color-accent); font-size: 1.45em;">
          "]"
    <nav aria-label="Main navigation" class="flex-1 py-4 overflow-y-auto px-3">
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="home" href="/overview">
          <svg aria-hidden="true" class="lucide lucide-layout-dashboard h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <rect height="9" rx="1" width="7" x="3" y="3">
            <rect height="5" rx="1" width="7" x="14" y="3">
            <rect height="9" rx="1" width="7" x="14" y="12">
            <rect height="5" rx="1" width="7" x="3" y="16">
          <span class="truncate">
            "Home"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="inbox" href="/my-failures">
          <svg aria-hidden="true" class="lucide lucide-inbox h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <polyline points="22 12 16 12 14 15 10 15 8 12 2 12">
            <path d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
          <span class="truncate">
            "Inbox"
          <span aria-label="3 assigned failures" class="rounded-full text-[10px] font-medium tabular-nums ml-auto px-1.5 py-0.5" data-nav-badge="" style="background: color-mix(in srgb, var(--status-failed) 18%, transparent); color: var(--status-failed); border: 1px solid color-mix(in srgb, var(--status-failed) 30%, transparent);">
            "3"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="INVESTIGATE">
          "INVESTIGATE"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="runs" href="/runs">
          <svg aria-hidden="true" class="lucide lucide-git-branch h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M15 6a9 9 0 0 0-9 9V3">
            <circle cx="18" cy="6" r="3">
            <circle cx="6" cy="18" r="3">
          <span class="truncate">
            "Runs"
          <span aria-label="1 run live now" class="h-2 w-2 rounded-full bg-[var(--status-failed)] animate-pulse ml-auto" data-nav-live="" role="img" title="1 run live now">
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="failures" href="/failures">
          <svg aria-hidden="true" class="lucide lucide-bug h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M12 20v-9">
            <path d="M14 7a4 4 0 0 1 4 4v3a6 6 0 0 1-12 0v-3a4 4 0 0 1 4-4z">
            <path d="M14.12 3.88 16 2">
            <path d="M21 21a4 4 0 0 0-3.81-4">
            <path d="M21 5a4 4 0 0 1-3.55 3.97">
            <path d="M22 13h-4">
            <path d="M3 21a4 4 0 0 1 3.81-4">
            <path d="M3 5a4 4 0 0 0 3.55 3.97">
            <path d="M6 13H2">
            <path d="m8 2 1.88 1.88">
            <path d="M9 7.13V6a3 3 0 1 1 6 0v1.13">
          <span class="truncate">
            "Failures"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="flaky" href="/flaky">
          <svg aria-hidden="true" class="lucide lucide-heart-pulse h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5">
            <path d="M3.22 13H9.5l.5-1 2 4.5 2-7 1.5 3.5h5.27">
          <span class="truncate">
            "Flaky tests"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="QUALITY">
          "QUALITY"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="trends" href="/trends">
          <svg aria-hidden="true" class="lucide lucide-trending-up h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M16 7h6v6">
            <path d="m22 7-8.5 8.5-5-5L2 17">
          <span class="truncate">
            "Trends"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="suites" href="/suites">
          <svg aria-hidden="true" class="lucide lucide-folder-tree h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M20 10a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2.5a1 1 0 0 1-.8-.4l-.9-1.2A1 1 0 0 0 15 3h-2a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1Z">
            <path d="M20 21a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-2.9a1 1 0 0 1-.88-.55l-.42-.85a1 1 0 0 0-.92-.6H13a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1Z">
            <path d="M3 5a2 2 0 0 0 2 2h3">
            <path d="M3 3v13a2 2 0 0 0 2 2h3">
          <span class="truncate">
            "Suites"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="test-cases" href="/test-management">
          <svg aria-hidden="true" class="lucide lucide-clipboard-list h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <rect height="4" rx="1" ry="1" width="8" x="8" y="2">
            <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2">
            <path d="M12 11h4">
            <path d="M12 16h4">
            <path d="M8 11h.01">
            <path d="M8 16h.01">
          <span class="truncate">
            "Test cases"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="reports" href="/reports/summary">
          <svg aria-hidden="true" class="lucide lucide-file-text h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            <path d="M10 9H8">
            <path d="M16 13H8">
            <path d="M16 17H8">
          <span class="truncate">
            "Reports"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="RELEASE">
          "RELEASE"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="release-gate" href="/release-gate">
          <svg aria-hidden="true" class="lucide lucide-shield h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z">
          <span class="truncate">
            "Release gate"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="releases" href="/releases">
          <svg aria-hidden="true" class="lucide lucide-package h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
            <path d="M12 22V12">
            <polyline points="3.29 7 12 12 20.71 7">
            <path d="m7.5 4.27 9 5.15">
          <span class="truncate">
            "Releases"
    <div class="py-3 space-y-1 px-3" style="border-top: 1px solid var(--color-border);">
      <a class="sidebar-link relative" data-discover="true" data-nav-id="admin" href="/settings">
        <svg aria-hidden="true" class="lucide lucide-settings h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915">
          <circle cx="12" cy="12" r="3">
        <span class="truncate">
          "Admin"
      <button aria-expanded="true" aria-label="Collapse sidebar" class="sidebar-link w-full" data-sidebar-toggle="" title="Collapse sidebar" type="button">
        <svg aria-hidden="true" class="lucide lucide-panel-left-close h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <rect height="18" rx="2" width="18" x="3" y="3">
          <path d="M9 3v18">
          <path d="m16 15-3-3 3-3">
        <span>
          "Collapse"
  <div class="flex flex-col flex-1 min-w-0 overflow-hidden">
    <header class="relative z-40 h-14 border-b backdrop-blur flex items-center px-6 gap-4 flex-shrink-0" style="border-color: var(--color-border); background: var(--color-bg-card);">
      <div class="flex-1 max-w-md relative">
        <svg aria-hidden="true" class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-[var(--color-text-muted)] pointer-events-none" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <path d="m21 21-4.34-4.34">
          <circle cx="11" cy="11" r="8">
        <input class="input pl-9 pr-9 h-9 text-sm" placeholder="Search tests, runs, defects… (Enter)" type="text" value="">
        <kbd aria-hidden="true" class="absolute right-2.5 top-1/2 -translate-y-1/2 pointer-events-none hidden sm:inline-flex items-center justify-center h-5 min-w-[1.25rem] px-1 rounded border border-[var(--color-border)] bg-[var(--color-bg-secondary)] text-[11px] font-mono text-[var(--color-text-muted)]">
          "/"
      <select aria-label="Select project" class="bg-[var(--color-bg-secondary)] border border-[var(--color-border)] text-[var(--color-text-secondary)] text-sm rounded-lg px-3 py-1.5 focus:outline-none focus:ring-2 focus:ring-[var(--color-ring)]">
        <option value="">
          "— Select project —"
        <option value="all">
          "All Projects"
        <option value="p1">
          "Core UI"
      <div data-stub="release-picker">
      <div class="ml-auto">
        <div class="relative">
          <button aria-expanded="false" aria-haspopup="menu" aria-label="Help" class="p-2 rounded-lg text-[var(--color-text-muted)] hover:text-[var(--color-text)] hover:bg-[var(--color-bg-secondary)] transition-colors" data-help-menu="" title="Help" type="button">
            <svg aria-hidden="true" class="lucide lucide-circle-question-mark w-5 h-5" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <circle cx="12" cy="12" r="10">
              <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3">
              <path d="M12 17h.01">
      <div class="relative">
        <button aria-label="Notifications (2 unread)" class="relative p-2 rounded-lg text-[var(--color-text-muted)] hover:text-[var(--color-text)] hover:bg-[var(--color-bg-secondary)] transition-colors">
          <svg aria-hidden="true" class="lucide lucide-bell w-5 h-5" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M10.268 21a2 2 0 0 0 3.464 0">
            <path d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326">
          <span class="absolute -top-0.5 -right-0.5 min-w-[18px] h-[18px] bg-[var(--status-failed)] text-white text-[11px] font-bold rounded-full flex items-center justify-center px-1">
            "2"
      <div class="relative border-l pl-4 h-full flex items-center" style="border-color: var(--color-border);">
        <button aria-expanded="false" aria-haspopup="menu" aria-label="Account menu" class="flex items-center gap-3 h-full rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-ring)]" type="button">
          <div class="w-8 h-8 rounded-full flex items-center justify-center text-white font-bold text-xs flex-shrink-0 bg-[var(--color-accent-muted)]">
            "TU"
          <div class="flex flex-col justify-center items-start">
            <span class="text-sm font-medium text-[var(--color-text)] leading-none">
              "Test User"
            <span class="text-xs text-[var(--color-text-muted)] mt-1 leading-none">
              "Admin"
    <main class="relative flex-1 overflow-auto" id="main-content" tabindex="-1">
      <div class="mx-auto w-full max-w-[1600px] px-4 py-6 sm:px-6 lg:px-8 xl:px-10">
        <div class="grid gap-6 lg:grid-cols-[220px_minmax(0,1fr)]" data-settings-layout="">
          <nav aria-label="Settings" class="lg:sticky lg:top-0 lg:self-start">
            <div class="space-y-4">
              <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="index" href="/settings">
                "All settings"
              <div data-settings-group="account">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "Account"
                <ul class="space-y-px">
                  <li>
                    <a aria-current="page" class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors bg-[var(--color-bg-secondary)] font-medium text-[var(--color-text)]" data-discover="true" data-settings-item="profile" href="/settings/profile">
                      "Profile"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="my-notifications" href="/settings/my-notifications">
                      "My notifications"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="my-api-keys" href="/settings/my-api-keys">
                      "My API keys"
              <div data-settings-group="project">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "Project"
                <ul class="space-y-px">
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="projects" href="/projects">
                      "Projects"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="members" href="/users?tab=project-members">
                      "Members & access"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="ownership" href="/ownership">
                      "Ownership"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="team-channels" href="/settings/team-channels">
                      "Team channels"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="api-keys" href="/settings/api-keys">
                      "Streaming API keys"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="retention" href="/settings/retention">
                      "Retention & purge"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="project-data" href="/settings/project-data">
                      "Project data"
              <div data-settings-group="release-governance">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "Release governance"
                <ul class="space-y-px">
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="policies" href="/policies">
                      "Gate policies"
              <div data-settings-group="integrations">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "Integrations"
                <ul class="space-y-px">
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="integrations" href="/settings/integrations">
                      "Jira, Splunk, OCP, Slack, Teams"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="github" href="/settings/github">
                      "GitHub"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="gitlab" href="/settings/gitlab">
                      "GitLab"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="webhooks" href="/settings/webhooks">
                      "Outbound webhooks"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="email" href="/settings/notifications">
                      "Email (SMTP) & channels"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="digests" href="/settings/digests">
                      "Digests & views"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="integration-health" href="/settings/integration-health">
                      "Integration health"
              <div data-settings-group="ai">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "AI"
                <ul class="space-y-px">
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="ai-config" href="/settings/ai">
                      "AI configuration"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="ai-agents" href="/settings/ai-agents">
                      "AI agents"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="workflows" href="/agents/workflows">
                      "Workflow editor"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="pipeline-runs" href="/agents">
                      "Pipeline runs"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="agent-activity" href="/settings/agent-activity">
                      "Agent activity"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="ai-eval" href="/settings/ai-eval">
                      "AI evaluation"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="billing" href="/settings/billing">
                      "LLM cost budget"
              <div data-settings-group="security">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "Security & access"
                <ul class="space-y-px">
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="users" href="/users">
                      "Users"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="sso" href="/settings/sso">
                      "SSO & identity"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="mfa-policy" href="/settings/mfa-policy">
                      "MFA & lockout"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="audit" href="/settings/audit">
                      "Audit dashboard"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="activity" href="/activity">
                      "Activity log"
              <div data-settings-group="system">
                <p class="mb-1 px-2 text-[10.5px] font-semibold uppercase tracking-wider text-[var(--color-text-muted)]">
                  "System"
                <ul class="space-y-px">
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="storage" href="/settings/storage">
                      "Data & storage"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="performance" href="/settings/performance">
                      "Performance"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="feature-flags" href="/settings/feature-flags">
                      "Feature flags"
                  <li>
                    <a class="block truncate rounded-md px-2 py-1 text-[13px] transition-colors text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-hover)] hover:text-[var(--color-text)]" data-discover="true" data-settings-item="seed-data" href="/settings/seed-data">
                      "Seed data"
          <div class="min-w-0" data-settings-content="">
            <div>
              "Page"
        <div class="sr-only" data-chart-announcer="polite" role="status">
        <div aria-atomic="true" aria-live="assertive" class="sr-only" data-chart-announcer="assertive">"
`;

exports[`AppLayout at 1024 px and above: the shell origin/main shipped > /trends: elements, attributes and desktop classes are unchanged 1`] = `
"<div class="flex h-screen overflow-hidden bg-[var(--color-bg)]">
  <a class="fixed left-4 top-4 z-[100] -translate-y-20 rounded-md bg-[var(--color-btn-primary-bg)] px-4 py-2 text-sm font-semibold text-[var(--color-btn-primary-text)] shadow-lg transition-transform focus:translate-y-0" href="#main-content">
    "Skip to main content"
  <aside class="flex-shrink-0 border-r flex flex-col transition-[width] duration-150 w-56" data-sidebar="expanded" style="background: var(--color-bg-card); border-color: var(--color-border);">
    <div class="py-5 border-b flex items-center justify-center px-4" style="border-color: var(--color-border);">
      <span aria-label="testlookup" class="inline-flex items-baseline leading-none text-[20px]" role="img">
        <span style="font-family: var(--font-mono); font-weight: 500; color: var(--color-accent); font-size: 1.45em;">
          "["
        <span style="font-family: var(--font-sans); font-weight: 400; color: var(--color-text); letter-spacing: -0.02em;">
          "test"
          <b style="font-weight: 700;">
            "lookup"
        <span style="font-family: var(--font-mono); font-weight: 500; color: var(--color-accent); font-size: 1.45em;">
          "]"
    <nav aria-label="Main navigation" class="flex-1 py-4 overflow-y-auto px-3">
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="home" href="/overview">
          <svg aria-hidden="true" class="lucide lucide-layout-dashboard h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <rect height="9" rx="1" width="7" x="3" y="3">
            <rect height="5" rx="1" width="7" x="14" y="3">
            <rect height="9" rx="1" width="7" x="14" y="12">
            <rect height="5" rx="1" width="7" x="3" y="16">
          <span class="truncate">
            "Home"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="inbox" href="/my-failures">
          <svg aria-hidden="true" class="lucide lucide-inbox h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <polyline points="22 12 16 12 14 15 10 15 8 12 2 12">
            <path d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
          <span class="truncate">
            "Inbox"
          <span aria-label="3 assigned failures" class="rounded-full text-[10px] font-medium tabular-nums ml-auto px-1.5 py-0.5" data-nav-badge="" style="background: color-mix(in srgb, var(--status-failed) 18%, transparent); color: var(--status-failed); border: 1px solid color-mix(in srgb, var(--status-failed) 30%, transparent);">
            "3"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="INVESTIGATE">
          "INVESTIGATE"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="runs" href="/runs">
          <svg aria-hidden="true" class="lucide lucide-git-branch h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M15 6a9 9 0 0 0-9 9V3">
            <circle cx="18" cy="6" r="3">
            <circle cx="6" cy="18" r="3">
          <span class="truncate">
            "Runs"
          <span aria-label="1 run live now" class="h-2 w-2 rounded-full bg-[var(--status-failed)] animate-pulse ml-auto" data-nav-live="" role="img" title="1 run live now">
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="failures" href="/failures">
          <svg aria-hidden="true" class="lucide lucide-bug h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M12 20v-9">
            <path d="M14 7a4 4 0 0 1 4 4v3a6 6 0 0 1-12 0v-3a4 4 0 0 1 4-4z">
            <path d="M14.12 3.88 16 2">
            <path d="M21 21a4 4 0 0 0-3.81-4">
            <path d="M21 5a4 4 0 0 1-3.55 3.97">
            <path d="M22 13h-4">
            <path d="M3 21a4 4 0 0 1 3.81-4">
            <path d="M3 5a4 4 0 0 0 3.55 3.97">
            <path d="M6 13H2">
            <path d="m8 2 1.88 1.88">
            <path d="M9 7.13V6a3 3 0 1 1 6 0v1.13">
          <span class="truncate">
            "Failures"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="flaky" href="/flaky">
          <svg aria-hidden="true" class="lucide lucide-heart-pulse h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5">
            <path d="M3.22 13H9.5l.5-1 2 4.5 2-7 1.5 3.5h5.27">
          <span class="truncate">
            "Flaky tests"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="QUALITY">
          "QUALITY"
        <a aria-current="page" class="sidebar-link relative active" data-discover="true" data-nav-id="trends" href="/trends">
          <svg aria-hidden="true" class="lucide lucide-trending-up h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M16 7h6v6">
            <path d="m22 7-8.5 8.5-5-5L2 17">
          <span class="truncate">
            "Trends"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="suites" href="/suites">
          <svg aria-hidden="true" class="lucide lucide-folder-tree h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M20 10a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2.5a1 1 0 0 1-.8-.4l-.9-1.2A1 1 0 0 0 15 3h-2a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1Z">
            <path d="M20 21a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-2.9a1 1 0 0 1-.88-.55l-.42-.85a1 1 0 0 0-.92-.6H13a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1Z">
            <path d="M3 5a2 2 0 0 0 2 2h3">
            <path d="M3 3v13a2 2 0 0 0 2 2h3">
          <span class="truncate">
            "Suites"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="test-cases" href="/test-management">
          <svg aria-hidden="true" class="lucide lucide-clipboard-list h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <rect height="4" rx="1" ry="1" width="8" x="8" y="2">
            <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2">
            <path d="M12 11h4">
            <path d="M12 16h4">
            <path d="M8 11h.01">
            <path d="M8 16h.01">
          <span class="truncate">
            "Test cases"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="reports" href="/reports/summary">
          <svg aria-hidden="true" class="lucide lucide-file-text h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z">
            <path d="M14 2v5a1 1 0 0 0 1 1h5">
            <path d="M10 9H8">
            <path d="M16 13H8">
            <path d="M16 17H8">
          <span class="truncate">
            "Reports"
      <div class="mt-0.5">
        <div class="px-3 pb-1 pt-4 text-[11px] font-medium uppercase tracking-wider text-[var(--color-text-muted)]" data-nav-section="RELEASE">
          "RELEASE"
        <a class="sidebar-link relative" data-discover="true" data-nav-id="release-gate" href="/release-gate">
          <svg aria-hidden="true" class="lucide lucide-shield h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z">
          <span class="truncate">
            "Release gate"
      <div class="mt-0.5">
        <a class="sidebar-link relative" data-discover="true" data-nav-id="releases" href="/releases">
          <svg aria-hidden="true" class="lucide lucide-package h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
            <path d="M12 22V12">
            <polyline points="3.29 7 12 12 20.71 7">
            <path d="m7.5 4.27 9 5.15">
          <span class="truncate">
            "Releases"
    <div class="py-3 space-y-1 px-3" style="border-top: 1px solid var(--color-border);">
      <a class="sidebar-link relative" data-discover="true" data-nav-id="admin" href="/settings">
        <svg aria-hidden="true" class="lucide lucide-settings h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915">
          <circle cx="12" cy="12" r="3">
        <span class="truncate">
          "Admin"
      <button aria-expanded="true" aria-label="Collapse sidebar" class="sidebar-link w-full" data-sidebar-toggle="" title="Collapse sidebar" type="button">
        <svg aria-hidden="true" class="lucide lucide-panel-left-close h-4 w-4 flex-shrink-0" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <rect height="18" rx="2" width="18" x="3" y="3">
          <path d="M9 3v18">
          <path d="m16 15-3-3 3-3">
        <span>
          "Collapse"
  <div class="flex flex-col flex-1 min-w-0 overflow-hidden">
    <header class="relative z-40 h-14 border-b backdrop-blur flex items-center px-6 gap-4 flex-shrink-0" style="border-color: var(--color-border); background: var(--color-bg-card);">
      <div class="flex-1 max-w-md relative">
        <svg aria-hidden="true" class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-[var(--color-text-muted)] pointer-events-none" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
          <path d="m21 21-4.34-4.34">
          <circle cx="11" cy="11" r="8">
        <input class="input pl-9 pr-9 h-9 text-sm" placeholder="Search tests, runs, defects… (Enter)" type="text" value="">
        <kbd aria-hidden="true" class="absolute right-2.5 top-1/2 -translate-y-1/2 pointer-events-none hidden sm:inline-flex items-center justify-center h-5 min-w-[1.25rem] px-1 rounded border border-[var(--color-border)] bg-[var(--color-bg-secondary)] text-[11px] font-mono text-[var(--color-text-muted)]">
          "/"
      <select aria-label="Select project" class="bg-[var(--color-bg-secondary)] border border-[var(--color-border)] text-[var(--color-text-secondary)] text-sm rounded-lg px-3 py-1.5 focus:outline-none focus:ring-2 focus:ring-[var(--color-ring)]">
        <option value="">
          "— Select project —"
        <option value="all">
          "All Projects"
        <option value="p1">
          "Core UI"
      <div data-stub="release-picker">
      <div class="ml-auto">
        <div class="relative">
          <button aria-expanded="false" aria-haspopup="menu" aria-label="Help" class="p-2 rounded-lg text-[var(--color-text-muted)] hover:text-[var(--color-text)] hover:bg-[var(--color-bg-secondary)] transition-colors" data-help-menu="" title="Help" type="button">
            <svg aria-hidden="true" class="lucide lucide-circle-question-mark w-5 h-5" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <circle cx="12" cy="12" r="10">
              <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3">
              <path d="M12 17h.01">
      <div class="relative">
        <button aria-label="Notifications (2 unread)" class="relative p-2 rounded-lg text-[var(--color-text-muted)] hover:text-[var(--color-text)] hover:bg-[var(--color-bg-secondary)] transition-colors">
          <svg aria-hidden="true" class="lucide lucide-bell w-5 h-5" fill="none" height="24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
            <path d="M10.268 21a2 2 0 0 0 3.464 0">
            <path d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326">
          <span class="absolute -top-0.5 -right-0.5 min-w-[18px] h-[18px] bg-[var(--status-failed)] text-white text-[11px] font-bold rounded-full flex items-center justify-center px-1">
            "2"
      <div class="relative border-l pl-4 h-full flex items-center" style="border-color: var(--color-border);">
        <button aria-expanded="false" aria-haspopup="menu" aria-label="Account menu" class="flex items-center gap-3 h-full rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-ring)]" type="button">
          <div class="w-8 h-8 rounded-full flex items-center justify-center text-white font-bold text-xs flex-shrink-0 bg-[var(--color-accent-muted)]">
            "TU"
          <div class="flex flex-col justify-center items-start">
            <span class="text-sm font-medium text-[var(--color-text)] leading-none">
              "Test User"
            <span class="text-xs text-[var(--color-text-muted)] mt-1 leading-none">
              "Admin"
    <main class="relative flex-1 overflow-auto" id="main-content" tabindex="-1">
      <div class="mx-auto w-full max-w-[1600px] px-4 py-6 sm:px-6 lg:px-8 xl:px-10">
        <div class="mb-4" data-section-tabs="trends">
          <nav aria-label="Trends pages" class="flex items-end gap-1 border-b border-[var(--color-border)]" data-route-tabs="">
            <a aria-current="page" class="-mb-px inline-flex items-center gap-1.5 border-b-2 px-3 py-2 text-[13px] leading-5 font-medium transition-colors border-[var(--color-accent)] text-[var(--color-text)]" data-discover="true" data-route-tab="/trends" href="/trends">
              "Trends"
            <a class="-mb-px inline-flex items-center gap-1.5 border-b-2 px-3 py-2 text-[13px] leading-5 font-medium transition-colors border-transparent text-[var(--color-text-muted)] hover:text-[var(--color-text)]" data-discover="true" data-route-tab="/coverage" href="/coverage">
              "Coverage"
            <a class="-mb-px inline-flex items-center gap-1.5 border-b-2 px-3 py-2 text-[13px] leading-5 font-medium transition-colors border-transparent text-[var(--color-text-muted)] hover:text-[var(--color-text)]" data-discover="true" data-route-tab="/explore" href="/explore">
              "Explorer"
        <div>
          "Page"
        <div class="sr-only" data-chart-announcer="polite" role="status">
        <div aria-atomic="true" aria-live="assertive" class="sr-only" data-chart-announcer="assertive">"
`;
